// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sendEmail sends failure email 1`] = `
Array [
  Array [
    Object {
      "Destination": Object {
        "ToAddresses": Array [
          "johncena@gmail.com",
        ],
      },
      "Message": Object {
        "Body": Object {
          "Html": Object {
            "Charset": "UTF-8",
            "Data": "
        <html>
        <head>
        </head>
        <body>
            <h1>Hello John,</h1>
            <p>Thanks for uploading a dataset to Cellscope! <br/>
              
  Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
  <a href=\\"scp.biomage.net/experiments/[object Object]/data-processing\\">scp.biomage.net/experiments/[object Object]/data-processing</a> <br/>
  Try running the process one more time. <br/>
  We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
  
                The Biomage Team 
            <p/>
        </body>
      </html>",
          },
          "Text": Object {
            "Charset": "UTF-8",
            "Data": "
        <html>
        <head>
        </head>
        <body>
            <h1>Hello John,</h1>
            <p>Thanks for uploading a dataset to Cellscope! <br/>
              
  Unfortunately, when trying to run the analysis the data processing failed for your experiment: <br/>
  <a href=\\"scp.biomage.net/experiments/[object Object]/data-processing\\">scp.biomage.net/experiments/[object Object]/data-processing</a> <br/>
  Try running the process one more time. <br/>
  We are working hard to identify and fix the issue. We will let you know as soon as your data is ready to explore. <br/>
  
                The Biomage Team 
            <p/>
        </body>
      </html>",
          },
        },
        "Subject": Object {
          "Charset": "UTF-8",
          "Data": "Biomage Pipeline status",
        },
      },
      "Source": "notification@biomage.net",
    },
    [Function],
  ],
]
`;

exports[`sendEmail sends success email 1`] = `
Array [
  Array [
    Object {
      "Destination": Object {
        "ToAddresses": Array [
          "johncena@gmail.com",
        ],
      },
      "Message": Object {
        "Body": Object {
          "Html": Object {
            "Charset": "UTF-8",
            "Data": "
        <html>
        <head>
        </head>
        <body>
            <h1>Hello John,</h1>
            <p>Thanks for uploading a dataset to Cellscope! <br/>
              
      The data processing pipeline has completed successfully and your data is now ready to explore:<br/>
      <a href=\\"scp.biomage.net/experiments/[object Object]/data-processing\\">scp.biomage.net/experiments/[object Object]/data-processing</a>
      Happy analysing!
                The Biomage Team 
            <p/>
        </body>
      </html>",
          },
          "Text": Object {
            "Charset": "UTF-8",
            "Data": "
        <html>
        <head>
        </head>
        <body>
            <h1>Hello John,</h1>
            <p>Thanks for uploading a dataset to Cellscope! <br/>
              
      The data processing pipeline has completed successfully and your data is now ready to explore:<br/>
      <a href=\\"scp.biomage.net/experiments/[object Object]/data-processing\\">scp.biomage.net/experiments/[object Object]/data-processing</a>
      Happy analysing!
                The Biomage Team 
            <p/>
        </body>
      </html>",
          },
        },
        "Subject": Object {
          "Charset": "UTF-8",
          "Data": "Biomage Pipeline status",
        },
      },
      "Source": "notification@biomage.net",
    },
    [Function],
  ],
]
`;
